# bandmaster

./: .air.toml  .bandmaster.yaml  .gitignore  AGENTS.md  CONTEXT.md  MVP_SPEC.md  README.md  go.mod  go.sum  tickets.md
.github/workflows/: release.yml  test.yml
.scratch/bandmaster-debug/: PRD.md
.scratch/bandmaster-debug-correctness/: PRD.md  tickets.md
.scratch/bandmaster-failure-recovery/: PRD.md
.scratch/bandmaster-mvp/: PRD.md
.scratch/go-agent-tui-redesign/: PRD.md  tickets.md
cmd/bandmaster/: main.go
docs/adr/: 0001-agent-and-batch-task-vocabulary.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
integration/: batch_abandon_test.go  batch_test.go  claim_test.go  cli_test.go  debug_test.go  doctor_test.go  finalization_manifest_test.go  finalization_rollback_test.go  finalization_test.go  incident_recovery_test.go  integrity_test.go  ownership_migration_test.go  repair_test.go  session_test.go  task_test.go  tui_test.go  v2_contract_test.go  validation_test.go
internal/cli/: cli.go  commands.go  debug.go  options.go  output.go
internal/project/: abort.go  batch.go  batch_abandon.go  batch_abandon_test.go  claim.go  claim_authority.go  claim_paths.go  claim_snapshot.go  configuration.go  debug.go  debug_collect.go  debug_test.go  diff.go  doctor.go  filesystem.go  finalization.go  finalization_recovery.go  git.go  (+20 more)
rust-bandmaster/: Cargo.toml  README.md
rust-bandmaster/src/: cli.rs  error.rs  lib.rs  main.rs  model.rs  project.rs  tui.rs
rust-bandmaster/tests/: cli_contract.rs  end_to_end.rs  project_engine.rs  tui_render.rs
(+21 files in other folders)
