[package]
name = "bandmaster"
version = "0.1.0"
edition = "2021"
description = "A simple Rust port of Bandmaster"
license = "MIT"

[features]
default = []
project = []
cli = ["project"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
